@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2005-2013 The R Core Team
+ *  Copyright (C) 2005-2014 The R Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -611,7 +611,9 @@ const char *locale2charset(const char *locale)
     p = strrchr(locale, '.');
     if(p) {
 	strncpy(enc, p+1, sizeof(enc)-1);
+        enc[sizeof(enc) - 1] = '\0';
 	strncpy(la_loc, locale, sizeof(la_loc)-1);
+        la_loc[sizeof(la_loc) - 1] = '\0';
 	p = strrchr(la_loc, '.');
 	if(p) *p = '\0';
     }
@@ -675,6 +677,7 @@ const char *locale2charset(const char *locale)
 	    if(cp != 0) return charset;
 	    /* IBM-eucXX case */
 	    strncpy(charset, (enc[3] == '-') ? enc+4: enc+3, sizeof(charset));
+            charset[sizeof(charset) - 1] = '\0';
 	    if(strncmp(charset, "euc", 3)) {
 		if (charset[3] != '-') {
 		    for(i = (int) strlen(charset)-3; 0 < i; i--)
