@@ -1242,6 +1242,7 @@ void reEnc2(const char *x, char *y, int ny,
     R_StringBuffer cbuff = {NULL, 0, MAXELTSIZE};
 
     strncpy(y, x, ny);
+    y[ny - 1] = '\0';
 
     if(ce_in == ce_out || ce_in == CE_ANY || ce_out == CE_ANY) return;
     if(utf8locale && ce_in == CE_NATIVE && ce_out == CE_UTF8) return;
@@ -1377,6 +1378,7 @@ size_t ucstomb(char *s, const unsigned int wc)
 	    char tocode[128];
 	    /* locale set fuzzy case */
 	    strncpy(tocode, locale2charset(NULL), sizeof(tocode));
+            tocode[sizeof(tocode) - 1] = '\0';
 	    if((void *)(-1) == (cd = Riconv_open(tocode, UNICODE)))
 		return (size_t)(-1);
 #else
